examples/test/testpolicy5245.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5245
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key21: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value13
          key1: value10
      podSelector:
        matchLabels:
          key1: value31
          key32: value18
          key10: value25
